# polytoken-gui

./: .gitignore  AGENTS.md  Cargo.toml  NEXT-SESSION.md  QUALITY.md  README.md  bunfig.toml  headless-deployment-handoff.md  justfile  package.json  parity-ready  pilot-feature-state.md  playwright.config.ts  playwright.live.config.ts  tsconfig.base.json  tsconfig.e2e.json  tsconfig.extensions.json  tsconfig.scripts.json
.claude/: launch.json
client/: index.html  package.json  tsconfig.json  vite.config.ts
deploy/: DEPLOY.md  bootstrap-headless.sh  bootstrap-tar-validator.sh  com.pantoken.deploy.plist  com.pantoken.server.plist  com.pilot.deploy.plist  com.pilot.server.plist  launchd-platform-gate.sh  legacy-cleanup-inventory.md  mac-mini-preflight.sh  run.sh  update-headless.sh
desktop/: Cargo.toml  README.md  build-app.sh  build.rs  package.json  tauri.conf.json
desktop-tauri/: Cargo.toml  Info.plist  README.md  package.json  tauri.conf.json
desktop/Sources/Pilot/: AppDelegate.swift  Config.swift
desktop/capabilities/: default.json  remote-commands.json
desktop/icons/: icon.icns
desktop/permissions/: remote-commands.toml
desktop/src/: bridge.rs  config.rs  docker_target.rs  main.rs  mouse_nav.rs  proc.rs  remote_commands.rs  remote_connection.rs  remote_executor.rs  remote_profile.rs  shell.rs  state.rs  supervisor.rs  updater.rs
desktop/src/bridge/: fake.rs
desktop/src/provisioning/: embedded_manifest.rs  fake.rs  mod.rs  pantoken_server_install.rs  polytoken_compat.rs  polytoken_install.rs  probe.rs  reconcile.rs
desktop/ui/: index.html
docs/: ADR-desktop-shell.md  DECISIONS.md  DESIGN.md  DONE.md  OPEN-QUESTIONS.md  PARITY-TESTING.md  PLAN-mobile.md  PLAN-parity-testing.md  PLAN-polytoken-driver.md  PLAN-self-contained-extensions.md  PLAN-strip-pi.md  STATUS.md  TODO.md  blind-rust-server-architecture-draft.md  container-connection-ui-task.md  design-system-pass.md  docker-target-guide.md  phase3-implementation-plan.md  polytoken-upstream-feature-asks.md  quality-gate.md  remote-connection-ui-task.md  remote-deployment-plan.md  remote-validation-checklist.md  ui-conventions.md
e2e/: abort-restore.e2e.ts  accent-roles.e2e.ts  active-unread.e2e.ts  adventurous-handoff.e2e.ts  answer-card.e2e.ts  approvals.e2e.ts  archive.e2e.ts  attention-cycle.e2e.ts  branch.e2e.ts  branch.mobile.e2e.ts  build-menu.e2e.ts  clean-tool-previews.e2e.ts  collapse-footer.e2e.ts  composer-chrome.e2e.ts  context-meter.e2e.ts  (+110 more)
server-rs/: Cargo.toml  PROGRESS.md  README.md
server-rs/pantoken-daemon-types/: Cargo.toml
server-rs/pantoken-daemon-types/src/: lib.rs
server-rs/pantoken-daemon-types/tests/: daemon_types_roundtrip.rs
server-rs/pantoken-protocol/: Cargo.toml
server-rs/pantoken-protocol/src/: frame.rs  lib.rs  session_driver.rs  state.rs  wire.rs
server-rs/pantoken-remote-layout/: Cargo.toml
server-rs/pantoken-remote-layout/src/: layout.rs  lib.rs  manifest.rs  semver.rs
server-rs/pantoken-server/: Cargo.toml  build.rs
server-rs/pantoken-server/src/: archive_store.rs  background_model.rs  config.rs  driver.rs  hub.rs  journal.rs  lib.rs  main.rs  mock_driver.rs  pidlock.rs  push.rs  settings_store.rs  static_serve.rs  stub_driver.rs  worktree_store.rs  ws_send.rs
server-rs/pantoken-server/src/connection/: mod.rs  stdio.rs  ws.rs
server-rs/pantoken-server/src/polytoken/: commands.rs  config_notify.rs  config_watcher.rs  corpus.rs  daemon_client.rs  driver.rs  event_map.rs  facets.rs  fake_daemon.rs  file_catalog.rs  file_search.rs  history_seed.rs  mod.rs  models.rs  process_identity.rs  sessions_registry.rs  ui_bridge.rs
server-rs/pantoken-server/src/remote/: manifest.rs  mod.rs  runtime.rs
server-rs/pantoken-server/src/shared/: login_env.rs  mod.rs  session_list.rs  warm_cap.rs  worktree.rs  worktree_name.rs
server-rs/pantoken-server/tests/: corpus.rs  live_path.rs  stdio_adapter_contract_tests.rs  websocket_adapter_contract_tests.rs
server-rs/pantoken-server/tests/support/: corpus.rs  fake_daemon.rs
server-rs/pantoken-tar-validate/: Cargo.toml
server-rs/pantoken-tar-validate/src/: lib.rs  main.rs
server-rs/pilot-daemon-types/: Cargo.toml
server-rs/pilot-daemon-types/src/: lib.rs
server-rs/pilot-protocol/: Cargo.toml
server-rs/pilot-protocol/src/: lib.rs  session_driver.rs  state.rs  wire.rs
server-rs/pilot-server/: Cargo.toml
server-rs/pilot-server/src/: archive_store.rs  config.rs  driver.rs  fake_daemon.rs  hub.rs  journal.rs  lib.rs  main.rs  mock_driver.rs  pidlock.rs  push.rs  settings_store.rs  static_serve.rs  stub_driver.rs  worktree_store.rs
server-rs/pilot-server/src/polytoken/: commands.rs  config_notify.rs  daemon_client.rs  driver.rs  event_map.rs  facets.rs  file_catalog.rs  history_seed.rs  mod.rs  models.rs  sessions_registry.rs  ui_bridge.rs
server-rs/pilot-server/src/shared/: login_env.rs  mod.rs  worktree.rs
server-rs/pilot-server/tests/: corpus.rs  live_path.rs
server-rs/pilot-server/tests/support/: corpus.rs  fake_daemon.rs  mod.rs
server-rs/tests/canon-parity/: non-canonical.json  ts-canonical.golden.json
server-rs/tests/corpus/0.4.0-unstable.7/: README.md  abort.json  ask-user-question.json  queue-while-in-flight.json  reconnect-stream-discontinuity.json  streaming-turn.json  tool-call-approval.json
server-rs/ts-test-reference/: README.md  archive-store.test.ts.bak  config.test.ts.bak  hub-journal.test.ts.bak  hub.test.ts.bak  journal.test.ts.bak  log.test.ts.bak  pidlock.test.ts.bak  push.test.ts.bak  settings-store.test.ts.bak  static.test.ts.bak  worktree-store.test.ts.bak  ws-send.test.ts.bak
server-rs/ts-test-reference/polytoken/: commands.test.ts.bak  config-notify.test.ts.bak  daemon-client.test.ts.bak  event-map.test.ts.bak  facets.test.ts.bak  file-catalog.test.ts.bak  history-seed.test.ts.bak  lease-retry.test.ts.bak  models.test.ts.bak  sessions-registry.test.ts.bak  ui-bridge.test.ts.bak
server-rs/ts-test-reference/shared/: background-model.test.ts.bak  login-env.test.ts.bak  session-list.test.ts.bak  warm-cap.test.ts.bak  worktree-name.test.ts.bak  worktree.test.ts.bak
(+346 files in other folders)
