[workspace]
members = [
    "desktop",
    "server-rs/pantoken-protocol",
    "server-rs/pantoken-daemon-types",
    "server-rs/pantoken-remote-layout",
    "server-rs/pantoken-server",
    "server-rs/pantoken-tar-validate",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
pantoken-protocol = { path = "server-rs/pantoken-protocol" }
pantoken-daemon-types = { path = "server-rs/pantoken-daemon-types" }
pantoken-remote-layout = { path = "server-rs/pantoken-remote-layout" }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "io-std", "process", "sync", "time", "macros", "fs", "signal"] }
axum = { version = "0.8", features = ["ws"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
tempfile = "3"
async-trait = "0.1"
parking_lot = "0.12"
flate2 = "1"
futures-util = { version = "0.3", default-features = false }
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
urlencoding = "2"
web-push = { version = "0.11", default-features = false, features = ["hyper-client"] }
# pure-rust feature avoids boring-sys (BoringSSL/cmake) — uses superboring pure-Rust backend. web-push uses the same.
jwt-simple = { version = "0.12", default-features = false, features = ["pure-rust"] }
ct-codecs = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rand = "0.9"
ignore = "0.4"
notify = "8"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
