[package]
name = "pantoken-desktop"
version = "0.2.77"
description = "Pantoken desktop shell — supervises the Bun hub as a sidecar and hosts the web client"
edition = "2021"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }
sha2 = { workspace = true }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
url = "2"
# Phase 1.6: local bridge (browser-WS ↔ SSH-stdio). The bridge runs on a
# dedicated tokio runtime spawned from the desktop side.
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "process", "sync", "time", "macros"] }
# tokio-util for CancellationToken used by the bridge's graceful shutdown.
tokio-util = { version = "0.7", default-features = false }
pantoken-protocol = { path = "../server-rs/pantoken-protocol" }
pantoken-daemon-types = { workspace = true }
pantoken-remote-layout = { workspace = true }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
# tokio-tungstenite is the bridge's real WS transport (Phase 2 promoted from
# dev-dep to dep). The browser connects via WebSocket; the bridge upgrades the
# loopback TCP accept into a WS stream and forwards WS↔SSH stdio.
tokio-tungstenite = "0.29"
tracing = "0.1"
# Phase 3: remote provisioning downloads polytoken archives locally, verifies
# SHA256, then uploads over SSH.
reqwest = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", features = ["NSEvent", "block2", "NSApplication", "NSResponder"] }
objc2-foundation = "0.3.2"
block2 = "0.6"
