[workspace]
members = ["pilot-protocol", "pilot-daemon-types", "pilot-server"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
pilot-protocol = { path = "pilot-protocol" }
pilot-daemon-types = { path = "pilot-daemon-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
tempfile = "3"
async-trait = "0.1"
parking_lot = "0.12"
flate2 = "1"
futures-util = { version = "0.3", default-features = false }
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
urlencoding = "2"
web-push = { version = "0.11", default-features = false, features = ["hyper-client"] }
