[package]
name = "pilot-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "pilot-server"
path = "src/main.rs"

[dependencies]
pilot-protocol = { workspace = true }
pilot-daemon-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
